<resources>
    <string name="app_name">BMI</string>
    <string name="mass_text">Masa[kg]</string>
    <string name="height_text">Wzrost[cm]</string>
    <string name="mass_text_UK">Masa[lb]</string>
    <string name="height_text_UK">Wzrost[cale]</string>
    <string name="BMI_button_text">Policz</string>
    <string name="default_number_edit_text_value"></string>
    <string name="wrong_values_toast">Złe wartości!</string>
    <string name="empty_fields_toast">Puste pola!</string>
    <string name="author_title">Mateusz Zimoch</string>
    <string name="my_photo_description">My photo</string>
    <string name="author_menu_item">O Autorze</string>
    <string name="save_bmi_item_title">saveBMI</string>
    <string name="uk_metric_text">Jednostki brytyjskie </string>
    <string name="bmi_info_default">otyłość</string>
    <string name="fstBMIrange">wygłodzenie</string>
    <string name="sndBMIrange">wychudzenie</string>
    <string name="thirdBMIrange">niedowaga</string>
    <string name="fourthBMIrange">wartość prawidłowa</string>
    <string name="fifthBMIrange">nadwaga</string>
    <string name="sixthBMIrange">I stopień otyłości</string>
    <string name="seventhBMIrange">II stopień otyłości</string>
    <string name="eighthBMIrange">otyłość skrajna</string>
    <string name="save_toast_text">Pomyślnie zapisano!</string>
    <string name="author_descr">Studiuję danologię na drugim stopniu i hobbystycznie informagtykę na pierwszym, skończyłem AiR W10 B)</string>
</resources>
